# Clovis

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakeUserPresets.json  LICENSE  Makefile  README.md  conanfile.txt
.github/workflows/: binaries.yml  clovis.yml  cmake-multi-platform.yml
img/: ClovisBanner.psd
resources/: bench.csv  perft.epd  silver-suite.pgn  silver.epd
src/: 960.epd  CMakeLists.txt  benchmark.cpp  benchmark.h  bitboard.cpp  bitboard.h  bitboard.hpp  clovis.cpp  cmdline.cpp  cmdline.h  common.hpp  evaluate.cpp  evaluate.h  evaluate.hpp  games.pgn  generate.cpp  generate.h  iq.cpp  iq.h  iqtest.epd  main.cpp  move_selector.cpp  move_selector.hpp  movelist.cpp  movelist.h  movelist.hpp  movepicker.cpp  movepicker.h  movepicker.hpp  parse.cpp  parse.h  perft.cpp  perft.epd  perft.h  perft.hpp  position.cpp  position.h  position.hpp  random.cpp  random.h  (+17 more)
src/bench/: CMakeLists.txt  bench.cpp
src/convert/: convert.cpp
src/engine/: CMakeLists.txt
src/engine/include/clovis/engine/: bitboard.hpp  evaluate.hpp  movelist.hpp  movepicker.hpp  position.hpp  tt.hpp
src/engine/src/: bitboard.cpp  evaluate.cpp  movelist.cpp  movepicker.cpp  position.cpp  search.cpp  tt.cpp
src/engine/test/: CMakeLists.txt  evaluate_test.cpp  main.cpp  position_test.cpp
src/iq/: iq.cpp
src/perft/: perft.cpp
src/tune/: tuner.cpp  tuner.hpp
src/tuner/: tuner.cpp  tuner.h
src/uci/: CMakeLists.txt  clovis.cpp  main.cpp  uci.cpp
test/: CMakeLists.txt  evaluate_test.cpp  main.cpp  test.cpp
tests/: CMakeLists.txt  evaluate_test.cpp  main.cpp  move_selector_test.cpp  movepicker_test.cpp  position_test.cpp
tools/: CMakeLists.txt  bench.py  uci.py
tools/bench/: CMakeLists.txt  bench.cpp
tools/convert/: CMakeLists.txt  convert.cpp
tools/iq/: CMakeLists.txt  iq.cpp
tools/perft/: CMakeLists.txt
tools/process/: CMakeLists.txt  process.cpp
tools/tune/: CMakeLists.txt  tune.epd
utilities/: CMakeLists.txt
utilities/convert/: CMakeLists.txt
utilities/iq/: CMakeLists.txt  iq.cpp  iq.epd
utilities/perft/: perft.cpp
utilities/tune/: tune.cpp  tune.hpp
x64/Debug/: Clovis.vcxproj.FileListAbsolute.txt  CodeAnalysisResultManifest.txt  bitboard.nativecodeanalysis.sarif  bitboard.nativecodeanalysis.xml  evaluate.nativecodeanalysis.sarif  main.nativecodeanalysis.sarif  main.nativecodeanalysis.xml  main.obj.enc  movelist.nativecodeanalysis.sarif  movepicker.nativecodeanalysis.sarif  movepicker.nativecodeanalysis.xml  perft.nativecodeanalysis.sarif  position.nativecodeanalysis.sarif  position.nativecodeanalysis.xml  position.obj.enc  random.nativecodeanalysis.sarif  search.nativecodeanalysis.sarif  search.obj.enc  time.nativecodeanalysis.sarif  tt.nativecodeanalysis.sarif  tuner.nativecodeanalysis.sarif  tuner.nativecodeanalysis.xml  uci.nativecodeanalysis.sarif  uci.obj.enc  vc.nativecodeanalysis.all.xml  vc142.idb
x64/Debug/Clovis.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Clovis.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
x64/Release/: Clovis.vcxproj.FileListAbsolute.txt
x64/Release/Clovis.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Clovis.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
